# osf-svn

tags/OSF-1.0/osf/installer/: README.txt
tags/OSF-1.0/osf/installer/image-data/: README.txt  get-selections.txt
tags/OSF-1.0/osf/installer/image-data/.disk/: info
tags/OSF-1.0/osf/installer/image-data/isolinux/: f1.txt  f10.txt  f2.txt  isolinux.txt
tags/OSF-1.0/osf/installer/scripts/: apt-ftparchive.conf  get-packages  strip-final-newline  uncopy-pool
tags/OSF-1.0/osf/osf-base/base-conf/: amavisd-static.conf  firehol.conf-2nic  issue.osf  spamassassin_init.pre
tags/OSF-1.0/osf/osf-base/conf-templates/: Makefile.am  amavisd.conf.tt2  fetchmailrc.tt2  ntp.conf.tt2  postfix_main.tt2  syslog-ng.conf.tt2
tags/OSF-1.0/osf/osf-base/debian/: control  prerm
tags/OSF-1.0/osf/osf-doc/: configure.ac  stylesheet-common.xsl
tags/OSF-1.0/osf/osf-doc/debian/: changelog  control  docs
tags/OSF-1.0/osf/osf-pull-config/: GNUmakefile  pull-config.conf
tags/OSF-1.0/osf/osf-pull-config/debian/: changelog  control
tags/OSF-1.0/osf/osf-utils/debian/: control  copyright
tags/OSF-1.0/osf/osf-web/: Makefile.am  Makefile.cvs  common.mk
tags/OSF-1.0/osf/osf-web/debian/: config  cron.d  dirs  install  links  postinst  prerm  squirrelmail_config.php  squirrelmail_theme.php
tags/OSF-1.0/osf/osf-web/htdocs/: index.cgi.in  remotetests.cgi.in  stylesheet.css  system-config.cgi.in
tags/OSF-1.0/osf/osf-web/htdocs/templates/: common_formbottom  common_formerror  common_htmltop  common_submitresponse  config_backup  fetchmail  index  remotetests  spamrules  (+3 more)
tags/OSF-1.0/osf/osf-web/lib/: Makefile.am
trunk/osf/installer/: Makefile
trunk/osf/installer/image-data/: apt_preferences  preseed.cfg
trunk/osf/installer/image-data/.disk/: info
trunk/osf/installer/image-data/isolinux/: f8.txt  f9.txt  isolinux.cfg
trunk/osf/installer/indices/: override  override.extra
trunk/osf/installer/scripts/: apt.conf  copy-pool  fix-deb-name  image.remove  make-combined-pool  make-doc  make-extra-pool  make-ftparchive  make-image  make-iso  make-pool
trunk/osf/osf-base/: Makefile.am  configure.ac  default-config.pl
trunk/osf/osf-base/base-conf/: Makefile.am  firehol.conf-1nic  issue.net.osf  logrotate.syslog-ng  postfix-master.cf  spamassassin_local.cf
trunk/osf/osf-base/conf-templates/: aliases.tt2  fetchmailrc.tt2  named.conf.options.tt2  sa_rules.tt2  syslog-ng.conf.tt2  syslog.conf.tt2
trunk/osf/osf-base/debian/: changelog  config  control  dirs  postinst  prerm  templates
trunk/osf/osf-doc/: Makefile.am  configure.ac  doc.de.xml  stylesheet-chunk.xsl  stylesheet-common.xsl  stylesheet-html.xsl  stylesheet.css  stylesheet.dsl
trunk/osf/osf-doc/debian/: changelog
trunk/osf/osf-pull-config/: cron.d  includelist  pull-config
trunk/osf/osf-pull-config/debian/: dirs  postrm
trunk/osf/osf-utils/: osf-make-ssl-cert
trunk/osf/osf-utils/debian/: changelog  install
trunk/osf/osf-web/: configure.ac
trunk/osf/osf-web/debian/: changelog  config  control  postinst  postrm  prerm  squirrelmail_config.php  templates
trunk/osf/osf-web/debian/etc/: apache.conf
trunk/osf/osf-web/htdocs/: Makefile.am  amavis-config.cgi.in  config-backup.cgi.in  errorhandler.cgi.in  fetchmail-config.cgi.in  index.html  postfix-logreport.cgi.in  remotetests.cgi.in  spamrules.cgi.in
trunk/osf/osf-web/htdocs/templates/: Makefile.am  common_htmlbottom  common_htmlpage  index  postfix_logreport_file  postfix_logreport_index  remotetests  widget_textarea
trunk/osf/osf-web/lib/OSF/: Config.pm.in  Makefile.am  Validate.pm
(+2 files in other folders)
