templatedir = $(pkgdatadir)/conf-templates
dist_template_DATA = \
        amavisd.conf.tt2 sa_rules.tt2 postfix_main.tt2 ntp.conf.tt2 \
        syslog-ng.conf.tt2 aliases.tt2 \
        fetchmailrc.tt2

# old files, kept in case they are needed again
EXTRA_DIST = syslog.conf.tt2 named.conf.options.tt2
