templatesdir = $(pkgdatadir)/templates/htdocs

dist_templates_DATA = \
	common_htmlpage common_htmltop common_htmlbottom common_submitresponse \
	common_formerror common_formbottom \
	widget_onoff widget_textfield widget_textarea widget_extchoice \
	index spamrules remotetests config_backup fetchmail \
	postfix_logreport_file postfix_logreport_index
